--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "release": "release-it"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,7 +44,13 @@
     ]
   },
   "devDependencies": {
-    "react-query-devtools": "^2.6.3"
+    "react-query-devtools": "^2.6.3",
+    "release-it": "^14.11.5"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "description": "a query example",
+  "main": "index.js",
+  "repository": "git@github.com:anjing0524/query-template.git",
+  "author": "qingtu",
+  "license": "MIT"
 }
