--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "release": "release-it"
+    "release": "release-it",
+    "postinstall": "husky install",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "husky": "^7.0.0",
     "react-query-devtools": "^2.6.3",
     "release-it": "^14.11.5"
   },
