--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test --env=jsdom",
+    "test": "NODE_ENV=test CI=true craco test --env=jsdom",
     "release": "release-it",
     "postinstall": "husky install",
     "prepare": "husky install",
